--- a/index.html
+++ b/index.html
@@ -18,26 +18,26 @@
 						<a href="index.html">Home</a>
 					</li>
 					<li>
-						<a href="about.html">About</a>
+						<a href="/pages/about.html">About</a>
 					</li>
 					<li class="menu">
-						<a href="projects.html">Projects</a>
+						<a href="/pages/projects.html">Projects</a>
 						<ul class="primary">
 							<li>
-								<a href="proj1.html">proj 1</a>
+								<a href="/pages/proj1.html">proj 1</a>
 							</li>
 						</ul>
 					</li>
 					<li class="menu">
-						<a href="blog.html">Blog</a>
+						<a href="/pages/blog.html">Blog</a>
 						<ul class="secondary">
 							<li>
-								<a href="singlepost.html">Single post</a>
+								<a href="/pages/singlepost.html">Single post</a>
 							</li>
 						</ul>
 					</li>
 					<li>
-						<a href="contact.html">Contact</a>
+						<a href="/pages/contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -48,7 +48,7 @@
 					<img src="images/satellite.png" alt="" class="satellite">
 					<h1>SOYUZ TMA-M</h1>
 					<h2>SPACECRAFT</h2>
-					<a href="blog.html" class="more">Read More</a>
+					<a href="blog.html" class="more">Read More</a>    
 					<h3>FEATURED PROJECTS</h3>
 					<ul>
 						<li>
