--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div id="page">
 		<div id="header">
 			<div>
-				<a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
+				<a href="#" class="logo"><img src="images/logo.png" alt=""></a>
 				<ul id="navigation">
 					<li class="selected">
 						<a href="index.html">Home</a>
@@ -45,23 +45,23 @@
 		<div id="body" class="home">
 			<div class="header">
 				<div>
-					<img src="images/satellite.png" alt="" class="satellite">
+					<img src="/images/satellite.png" alt="" class="satellite">
 					<h1>SOYUZ TMA-M</h1>
 					<h2>SPACECRAFT</h2>
 					<a href="blog.html" class="more">Read More</a>    
 					<h3>FEATURED PROJECTS</h3>
 					<ul>
 						<li>
-							<a href="projects.html"><img src="images/project-image1.jpg" alt=""></a>
+							<a href="projects.html"><img src="/images/project-image1.jpg" alt=""></a>
 						</li>
 						<li>
-							<a href="projects.html"><img src="images/project-image2.jpg" alt=""></a>
+							<a href="projects.html"><img src="/images/project-image2.jpg" alt=""></a>
 						</li>
 						<li>
-							<a href="projects.html"><img src="images/project-image3.jpg" alt=""></a>
+							<a href="projects.html"><img src="/images/project-image3.jpg" alt=""></a>
 						</li>
 						<li>
-							<a href="projects.html"><img src="images/project-image4.jpg" alt=""></a>
+							<a href="projects.html"><img src="/images/project-image4.jpg" alt=""></a>
 						</li>
 					</ul>
 				</div>
@@ -77,19 +77,19 @@
 					<ul>
 						<li>
 							<h1>FEATURED VIDEO</h1>
-							<a href="blog.html"><img src="images/mars-rover.jpg" alt=""><span></span></a>
+							<a href="blog.html"><img src="/images/mars-rover.jpg" alt=""><span></span></a>
 						</li>
 						<li>
 							<h1>LATEST BLOG</h1>
 							<ul>
 								<li>
-									<a href="blog.html"><img src="images/finding-planet.jpg" alt=""></a>
+									<a href="blog.html"><img src="/images/finding-planet.jpg" alt=""></a>
 									<h1>FINDING PLANET X-123</h1>
 									<span>FEBRUARY 6, 2023</span>
 									<a href="blog.html" class="more">Read More</a>
 								</li>
 								<li>
-									<a href="blog.html"><img src="images/new-satellitedish.jpg" alt=""></a>
+									<a href="blog.html"><img src="/images/new-satellitedish.jpg" alt=""></a>
 									<h1>NEW SATELLITE DISH</h1>
 									<span>FEBRUARY 3, 2023</span>
 									<a href="blog.html" class="more">Read More</a>
