--- a/pages/blog.html
+++ b/pages/blog.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>blog - Space Science Website Template</title>
+	<title>blog - Space Comrades</title>
 	<link rel="stylesheet" href="/css/style.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="/css/mobile.css">
 	<script src="js/mobile.js" type="text/javascript"></script>
@@ -12,35 +12,36 @@
 	<div id="page">
 		<div id="header">
 			<div>
-				<a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
+				<a href="#" class="logo"><img src="/images/logo.png/" alt=""></a>
 				<ul id="navigation">
-					<li>
-						<a href="index.html">Home</a>
-					</li>
-					<li>
-						<a href="about.html">About</a>
-					</li>
-					<li class="menu">
-						<a href="projects.html">Projects</a>
-						<ul class="primary">
+
+							<li class="selected">
+								<a href="/index.html">Home</a>
+							</li>
 							<li>
-								<a href="proj1.html">proj 1</a>
+								<a href="/pages/about.html">About</a>
+							</li>
+							<li class="menu">
+								<a href="/pages/projects.html">Projects</a>
+								<ul class="primary">
+									<li>
+										<a href="/pages/proj1.html">proj 1</a>
+									</li>
+								</ul>
+							</li>
+							<li class="menu">
+								<a href="/pages/blog.html">Blog</a>
+								<ul class="secondary">
+									<li>
+										<a href="/pages/singlepost.html">Single post</a>
+									</li>
+								</ul>
+							</li>
+							<li>
+								<a href="/pages/contact.html">Contact</a>
 							</li>
 						</ul>
-					</li>
-					<li class="menu selected">
-						<a href="blog.html">Blog</a>
-						<ul class="secondary">
-							<li>
-								<a href="singlepost.html">Single post</a>
-							</li>
-						</ul>
-					</li>
-					<li>
-						<a href="contact.html">Contact</a>
-					</li>
-				</ul>
-			</div>
+					</div>
 		</div>
 		<div id="body">
 			<div class="header">
@@ -49,14 +50,14 @@
 					<div class="article">
 						<ul>
 							<li>
-								<a href="singlepost.html"><img src="images/astronaut.jpg" alt=""></a>
+								<a href="singlepost.html"><img src="/images/astronaut.jpg" alt=""></a>
 								<h1>SUCCESFUL REPAIR OF THE MX-1 SAT</h1>
 								<span>FEBRUARY 6, 2023</span>
 								<p>This website template has been designed by Free Website Templates for you, for free. You can replace all this text with your own text.</p>
 								<a href="singlepost.html" class="more">Read More</a>
 							</li>
 							<li>
-								<a href="singlepost.html"><img src="images/satellite-dish.jpg" alt=""></a>
+								<a href="singlepost.html"><img src="/images/satellite-dish.jpg" alt=""></a>
 								<h1>ALIEN SIGNAL DISCOVERY</h1>
 								<span>FEBRUARY 3, 2023</span>
 								<p>You can remove any link to our website from this website template, you're free to use this website template without linking back to us.</p>
@@ -68,7 +69,7 @@
 						<ul>
 							<li>
 								<h1>FEATURED POSTS</h1>
-								<a href="singlepost.html"><img src="images/moon-satellite.jpg" alt=""></a>
+								<a href="singlepost.html"><img src="/images/moon-satellite.jpg" alt=""></a>
 								<h2>SOYUZ TMA-M</h2>
 								<span>FEBRUARY 6, 2023</span>
 							</li>
@@ -76,12 +77,12 @@
 								<h1>RECENT POSTS</h1>
 								<ul>
 									<li>
-										<a href="singlepost.html"><img src="images/alien-life.jpg" alt=""></a>
+										<a href="singlepost.html"><img src="/images/alien-life.jpg" alt=""></a>
 										<h2>ALIEN LIFE</h2>
 										<span>FEBRUARY 3, 2023</span>
 									</li>
 									<li>
-										<a href="singlepost.html"><img src="images/galaxy.jpg" alt=""></a>
+										<a href="singlepost.html"><img src="/images/galaxy.jpg" alt=""></a>
 										<h2>THE GALAXY</h2>
 										<span>FEBRUARY 1, 2023</span>
 									</li>
