--- a/pages/projects.html
+++ b/pages/projects.html
@@ -12,35 +12,36 @@
 	<div id="page">
 		<div id="header">
 			<div>
-				<a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
+				<a href="#" class="logo"><img src="/images/logo.png" alt=""></a>
 				<ul id="navigation">
-					<li>
-						<a href="index.html">Home</a>
-					</li>
-					<li>
-						<a href="about.html">About</a>
-					</li>
-					<li class="menu selected">
-						<a href="projects.html">Projects</a>
-						<ul class="primary">
+
+							<li class="selected">
+								<a href="/index.html">Home</a>
+							</li>
 							<li>
-								<a href="proj1.html">proj 1</a>
+								<a href="/pages/about.html">About</a>
+							</li>
+							<li class="menu">
+								<a href="/pages/projects.html">Projects</a>
+								<ul class="primary">
+									<li>
+										<a href="/pages/proj1.html">proj 1</a>
+									</li>
+								</ul>
+							</li>
+							<li class="menu">
+								<a href="/pages/blog.html">Blog</a>
+								<ul class="secondary">
+									<li>
+										<a href="/pages/singlepost.html">Single post</a>
+									</li>
+								</ul>
+							</li>
+							<li>
+								<a href="/pages/contact.html">Contact</a>
 							</li>
 						</ul>
-					</li>
-					<li class="menu">
-						<a href="blog.html">Blog</a>
-						<ul class="secondary">
-							<li>
-								<a href="singlepost.html">Single post</a>
-							</li>
-						</ul>
-					</li>
-					<li>
-						<a href="contact.html">Contact</a>
-					</li>
-				</ul>
-			</div>
+					</div>
 		</div>
 		<div id="body">
 			<div class="header">
@@ -48,7 +49,7 @@
 					<h1>Projects</h1>
 					<ul>
 						<li>
-							<a href="proj1.html"><img src="images/curious-rover.jpg" alt=""></a>
+							<a href="proj1.html"><img src="/images/curious-rover.jpg" alt=""></a>
 							<div>
 								<h1>MARS CURIOSITY ROVER </h1>
 								<p>Our website templates are created with inspiration, checked for quality and originality and meticulously sliced and coded. What’s more, they’re absolutely free! You can do a lot with them. You can modify them. You can use them to design websites for clients, so long as you agree with the Terms of Use.</p>
@@ -56,7 +57,7 @@
 							</div>
 						</li>
 						<li>
-							<a href="proj1.html"><img src="images/space-station.jpg" alt=""></a>
+							<a href="proj1.html"><img src="/images/space-station.jpg" alt=""></a>
 							<div>
 								<h1>INTERTERNATIONAL SPACE STATION</h1>
 								<p>Looking for more templates? Just browse through all our Free Website Templates and find what you’re looking for. But if you don’t find any website template you can use, you can try our Free Web Design service and tell us all about it. Maybe you’re looking for something different, something special.</p>
