--- a/pages/singlepost.html
+++ b/pages/singlepost.html
@@ -12,35 +12,36 @@
 	<div id="page">
 		<div id="header">
 			<div>
-				<a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
+				<a href="#" class="logo"><img src="/images/logo.png" alt=""></a>
 				<ul id="navigation">
-					<li>
-						<a href="index.html">Home</a>
-					</li>
-					<li>
-						<a href="about.html">About</a>
-					</li>
-					<li class="menu">
-						<a href="projects.html">Projects</a>
-						<ul class="primary">
+
+							<li class="selected">
+								<a href="/index.html">Home</a>
+							</li>
 							<li>
-								<a href="proj1.html">proj 1</a>
+								<a href="/pages/about.html">About</a>
+							</li>
+							<li class="menu">
+								<a href="/pages/projects.html">Projects</a>
+								<ul class="primary">
+									<li>
+										<a href="/pages/proj1.html">proj 1</a>
+									</li>
+								</ul>
+							</li>
+							<li class="menu">
+								<a href="/pages/blog.html">Blog</a>
+								<ul class="secondary">
+									<li>
+										<a href="/pages/singlepost.html">Single post</a>
+									</li>
+								</ul>
+							</li>
+							<li>
+								<a href="/pages/contact.html">Contact</a>
 							</li>
 						</ul>
-					</li>
-					<li class="menu">
-						<a href="blog.html">Blog</a>
-						<ul class="secondary selected">
-							<li>
-								<a href="singlepost.html">Single post</a>
-							</li>
-						</ul>
-					</li>
-					<li>
-						<a href="contact.html">Contact</a>
-					</li>
-				</ul>
-			</div>
+					</div>
 		</div>
 		<div id="body">
 			<div class="header">
