--- a/pages/singlepost.html
+++ b/pages/singlepost.html
@@ -42,13 +42,13 @@
 							</li>
 						</ul>
 					</div>
-		</div>
+		</div>/
 		<div id="body">
 			<div class="header">
 				<div>
 					<h1>Single Post</h1>
 					<div class="article">
-						<img src="images/martianrover-journey.jpg" alt="">
+						<img src="/images/martianrover-journey.jpg" alt="">
 						<h1>MARTIAN ROVER JOURNEY</h1>
 						<span>FEBRUARY 6, 2023</span>
 						<p>Our website templates are created with inspiration, checked for quality and originality and meticulously sliced and coded. What’s more, they’re absolutely free! You can do a lot with them. You can modify them. You can use them to design websites for clients, so long as you agree with the Terms of Use. You can even remove all our links if you want to.</p>
@@ -58,7 +58,7 @@
 						<ul>
 							<li>
 								<h1>FEATURED POSTS</h1>
-								<a href="blog.html"><img src="images/moon-satellite.jpg" alt=""></a>
+								<a href="blog.html"><img src="/images/moon-satellite.jpg" alt=""></a>
 								<h2>SOYUZ TMA-M</h2>
 								<span>FEBRUARY 6, 2023</span>
 							</li>
@@ -66,12 +66,12 @@
 								<h1>RECENT POSTS</h1>
 								<ul>
 									<li>
-										<a href="blog.html"><img src="images/alien-life.jpg" alt=""></a>
+										<a href="blog.html"><img src="/images/alien-life.jpg" alt=""></a>
 										<h2>ALIEN LIFE</h2>
 										<span>FEBRUARY 3, 2023</span>
 									</li>
 									<li>
-										<a href="blog.html"><img src="images/galaxy.jpg" alt=""></a>
+										<a href="blog.html"><img src="/images/galaxy.jpg" alt=""></a>
 										<h2>THE GALAXY</h2>
 										<span>FEBRUARY 1, 2023</span>
 									</li>
