--- a/pages/singlepost.html
+++ b/pages/singlepost.html
@@ -19,13 +19,13 @@
 								<a href="/index.html">Home</a>
 							</li>
 							<li>
-								<a href="/pages/about.html">About</a>
+								<a href="#">About</a>
 							</li>
 							<li class="menu">
-								<a href="/pages/projects.html">Projects</a>
+								<a href="/pages/projects.html">insights</a>
 								<ul class="primary">
 									<li>
-										<a href="/pages/proj1.html">proj 1</a>
+										<a href="/pages/proj1.html">chandryaan</a>
 									</li>
 								</ul>
 							</li>
