--- a/pages/contact.html
+++ b/pages/contact.html
@@ -19,7 +19,7 @@
 								<a href="/index.html">Home</a>
 							</li>
 							<li>
-								<a href="/pages/about.html">About</a>
+								<a href="#">About</a>
 							</li>
 							<li class="menu">
 								<a href="/pages/projects.html">insights</a>
