--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 	<div id="page">
 		<div id="header">
 			<div>
-				<a href="#" class="logo"><img src="images/logo.png" alt=""></a>
+				<a href="#" class="logo"><img src="/images/logo.png
+					" alt=""></a>
 				<ul id="navigation">
 					<li class="selected">
 						<a href="index.html">Home</a>
