--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<h2>enhancement</h2>
 					<body>
 						<div class="drop-zone">
-						  <span class="drop-zone__prompt">Click to Upload</span>
+						  <span class="drop-zone__prompt">upload image</span>
 						  <input type="file" name="myFile" class="drop-zone__input">
 						</div>
 					<h3>Glimpse Gallery</h3>
@@ -86,13 +86,13 @@
 							<h1>LATEST BLOG</h1>
 							<ul>
 								<li>
-									<a href="blog.html"><img src="images/shackleton.0001.jpg" alt=""></a>
+									<a href="#"><img src="images/shackleton.0001.jpg" alt=""></a>
 									<h1>psrs and ohrc</h1>
 								
 									<a href="blog.html" class="more">Read More</a>
 								</li>
 								<li>
-									<a href="blog.html"><img src="images/download.jpg" alt=""></a>
+									<a href="#"><img src="images/download.jpg" alt=""></a>
 									<h1>HYPERSPECTRAL IMAGING TECHNIQUES</h1>
 									
 									<a href="blog.html" class="more">Read More</a>
