--- a/pages/about.html
+++ b/pages/about.html
@@ -12,7 +12,7 @@
 	<div id="page">
 		<div id="header">
 			<div>
-				<a href="#" class="logo"><img src="/images/logo.png" alt=""></a>
+				<a href="#" class="logo"><img src="/images/logo1.jpg" alt=""></a>
 				<ul id="navigation">
 
 							<li class="selected">
